# pySGP4-prj

./: .gitignore  README.md  main.py  produce_all_images_from_typst.py  pyproject.toml  pysgp4_checkversion.py
pysgp4/: ExtEphemWrapper.py  README.md  SpVecWrapper.py  TimeFuncWrapper.py  VcmWrapper.py  __init__.py  astrofunc.py  dllmain.py  envconst.py  timefunc.py
pysgp4/_wrapper/: AstroFuncWrapper.py  AstroUtils.py  DllMainWrapper.py  ElOpsWrapper.py  EnvConstWrapper.py  ObsWrapper.py  SatStateWrapper.py  SensorWrapper.py  Sgp4PropWrapper.py  TleWrapper.py
scripts/: list_low_orbit_objects.py  oblate_earth.py  sun_sync.py
scripts/DriverExamples/: SGP4_Open_License.txt
scripts/DriverExamples/Sgp4Prop/: runExample.bat  runExample.sh
scripts/DriverExamples/Sgp4Prop/input/: XP_23060.els  bright.inp
scripts/DriverExamples/Sgp4Prop/src/: AstroUtils.py  Sgp4Prop.py
scripts/DriverExamples/Sgp4Prop_Simple/: runExample.bat  runExample.sh
scripts/DriverExamples/Sgp4Prop_Simple/src/: Sgp4Prop_Simple.py
scripts/DriverExamples/TestInterfaces/: runExample.bat  runExample.sh
scripts/DriverExamples/TestInterfaces/src/: TestInterfaces.py
sgp4_xp_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_astrofunc.py  test_astrofunc_constants.py  test_astrofunc_methods.py  test_dll_main.py  test_env_const.py  test_timefunc.py  test_wrappers_dll_loading.py
typst_imgs/: J2.typ  eom.typ  ff.typ  frames.typ  grav.typ  rotation_matrix.typ  sun_sync.typ  uvw.typ
